--- a/loot.html
+++ b/loot.html
@@ -7,23 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
-  <div class="animation">
-    </div>
-
-  <iframe src="img/intro_audio.mp3" autoplay="true" loop style="display:none" id="iframeAudio">
-  </iframe>
-      <audio src="img/intro_audio.mp3" autoplay="true" loop="true"  id="playAudio">
-
-      </audio>
-
-        <img src="img/Logo_24.png" class="logo" ></img>
-
-          <a href="https://play.google.com/store/apps/details?id=com.hackncs.zealicon.loot">
-          <img src="img/store.png" class="store" ></img>
-        </a>
-          <a href="https://www.facebook.com/lootzealicon"><h2>Any Trouble?</h2></a>
-          <img class="image d-none d-md-block" src="img/rqrr.png">
-          <h3>5-6 March 8:00 A.M Onwards</h3>
+<audio src="img/intro_audio.mp3" autoplay="true" loop="true"  id="playAudio"></audio>
+<img src="img/Logo_24.png" class="logo" ></img>
+<a href="https://play.google.com/store/apps/details?id=com.hackncs.zealicon.loot">
+<img src="img/store.png" class="store" ></img></a>
+<a href="https://www.facebook.com/lootzealicon"><h2>Any Trouble?</h2></a>
+<img class="image" src="img/rqrr.png">
+<h3>5-6 March 8:00 A.M Onwards</h3>
 </body>
 </html>
